# FirstOrganizedCMake

./: CMakeLists.txt
.github/workflows/: CD.yml  cmake.yml
cmake/: FirstOrganizedCMakeConfig.cmake.in  FirstOrganizedCMakeConfig.h.in
mains/: hello.cpp
src/log_lib/: CMakeLists.txt  print_log.cpp
tests/: CMakeLists.txt  test_hello.cpp  test_version.cpp
